# ChessSDL2

./: .gitignore  CMakeLists.txt  README.md
include/Board/: Board.h  Move.h  Square.h
include/GUI/: Button.h  Input.h  Layout.h  TextElement.h
include/Pieces/: Bishop.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h
include/TextureManager/: TextureManager.h
include/Utils/: AudioManager.h  Move.h  NetworkManager.h  Position.h  TextureManager.h
src/: main.cpp
src/Board/: Board.cpp  Square.cpp
src/GUI/: Button.cpp  Input.cpp  Layout.cpp  TextElement.cpp
src/Pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp
src/TextureManager/: TextureManager.cpp
src/Utils/: AudioManager.cpp  NetworkManager.cpp  TextureManager.cpp
